bugfix: stretching images -> object-fit: cover

--- a/src/styles/messages.scss
+++ b/src/styles/messages.scss
@@ -21,6 +21,7 @@
         overflow: hidden;
         height: 60px;
         width: 60px;
+        object-fit: cover;
     }
     &-username {
         font-size: 25px;
